--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   }
 }
