--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "engines": {
     "node": "22.17.0"
+    
   }
 
   ,
@@ -31,6 +32,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serverless-http": "^3.0.0",
+    "ejs": "^3.1.8"
   }
 }
