--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "engines": {
-    "node": "22.x"
-    
-  }
-
-  ,
+    "node": "22.17.0"
+  },
   "name": "orvane",
   "version": "1.0.0",
   "description": "",
@@ -22,6 +19,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -33,7 +31,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
-    "serverless-http": "^3.0.0",
-    "ejs": "^3.1.8"
+    "serverless-http": "^3.2.0"
   }
 }
